# study

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  crimson-voyager-threat-model.md  pyproject.toml  requirements.txt  security_best_practices_report.md
.github/workflows/: ci.yml  live-provider-smoke.yml  release.yml
.tmp-test/: tmp3c_a_ji6  tmpc4v0o91t  tmpkcw_8m4n
docs/: launch-copy.md  launch-demo.md  manual-terminal-smoke.md  release-checklist.md
docs/deployment/: hosted-demo.md
docs/hackathon/: phase-1-pitch-deck.html
docs/plans/: 2026-03-21-manim-animation-design.md
scripts/: launch-hosted-demo.sh  manual_terminal_smoke.ps1  package_smoke.py
skills/brainstorm/: SKILL.md
skills/brainstorm/agents/: openai.yaml
skills/craft-readmes/: SKILL.md
skills/craft-readmes/agents/: openai.yaml
skills/craft-readmes/references/: media.md  patterns.md
skills/study-tui-production-hardening/: SKILL.md
skills/study-tui-production-hardening/agents/: openai.yaml
skills/study-tui-production-hardening/references/: quality-bar.md  repo-map.md
skills/study-tui-production-hardening/scripts/: hardening_gate.py
src/: __init__.py  __main__.py  anki_client.py  app.py  calibre_client.py  card_formats.py  chat_history.py  context_engine.py  debug_trace.py  exporter.py  latex_render.py  manim_renderer.py  motion_canvas_renderer.py  notes.py  personalization_engine.py  pomodoro.py  retention_engine.py  secure_storage.py  study_progress.py  theme.tcss  web_search.py  zotero_client.py  zotero_webhook.py
src/agents/: agent_manager.py  model_client.py  provider.py  tools.py
src/parsers/: doc_store.py  image_parser.py  pdf_parser.py
src/widgets/: chat.py  mascot_art.py
tests/: conftest.py  test_agent_manager.py  test_agent_manager_extended.py  test_anki_client.py  test_app_commands.py  test_app_extended.py  test_card_formats.py  test_chat_widget.py  test_chat_widget_extended.py  test_context_engine.py  test_debug_trace.py  test_doc_store.py  test_entrypoints.py  test_exporter.py  test_exporter_extended.py  test_history_notes.py  test_image_parser.py  test_latex_render.py  test_manim_renderer.py  test_model_client_extended.py  test_motion_canvas_renderer.py  test_pdf_parser.py  test_personalization_engine.py  test_pomodoro.py  test_provider.py  test_provider_extended.py  test_provider_live.py  test_retention_engine.py  test_storage_extended.py  test_study_progress.py  test_study_progress_retention.py  test_web_search.py  test_web_search_extended.py  test_zotero_webhook.py
